# tokamak-early-warning

./: .gitignore  DATASET.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt  tado actual
.github/: copilot-instructions.md
.github/workflows/: readme-linkcheck.yml  tests.yml
assets/figures/: .gitkeep
notebooks/: 02_demo.ipynb
results/: .gitkeep
scripts/: baseline.py  check_readme_assets.py  evaluate_alarm_policy.py  evaluate_uncertainty.py  fetch_data.sh  generate_readme_figures.py  make_early_warning_labels.py  make_figures.py  reproduce.sh  train_tcn.py
src/: __init__.py
src/alerting/: __init__.py  policy.py
src/data/: dataset.py
src/evaluation/: __init__.py  alarm_metrics.py  event_metrics.py  metrics.py
src/features/: __init__.py  temporal.py
src/models/: __init__.py  baseline_lr.py  tcn.py
src/uncertainty/: __init__.py  calibration.py  conformal.py
tests/: __init__.py  test_alarm_metrics.py  test_baseline_lr.py  test_calibration.py  test_conformal.py  test_data_splitting.py  test_event_metrics.py  test_features.py  test_metrics.py  test_policy.py
tokamak_early_warning/: __init__.py  cli.py  config.py  reports.py
